@@ -3,6 +3,7 @@ ver 0.16.7 (2011/??/??)
   - ffmpeg: support libavformat 0.7
 * decoder:
   - ffmpeg: support libavformat 0.8, libavcodec 0.8
+  - ffmpeg: support all MPD tags
 * output:
   - httpd: fix excessive buffering
   - openal: force 16 bit playback, as 8 bit doesn't work
